feat: add CORS configuration to allow cross-origin requests from specified origins