@@ -9,12 +9,13 @@ import org.springframework.web.filter.CorsFilter;
 
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Configuration
 public class CorsConfig {
 
-    // Set ALLOWED_ORIGINS env var in Render to add more origins
-    // Default includes Vercel deployment + localhost for dev
+    // Set ALLOWED_ORIGINS env var on Render to your Vercel URLs (comma-separated)
+    // Use "*" to allow all origins (useful for debugging, not recommended for production)
     @Value("${ALLOWED_ORIGINS:https://payment-system-9ev8.vercel.app,http://localhost:3000,http://localhost:5173}")
     private String allowedOriginsRaw;
 
@@ -22,12 +23,24 @@ public class CorsConfig {
     public CorsFilter corsFilter() {
         CorsConfiguration config = new CorsConfiguration();
 
-        // Parse comma-separated origins from env var
-        List<String> origins = Arrays.asList(allowedOriginsRaw.split(","));
-        config.setAllowedOrigins(origins);
+        // Trim whitespace from each origin and filter empty strings
+        List<String> origins = Arrays.stream(allowedOriginsRaw.split(","))
+                .map(String::trim)
+                .filter(s -> !s.isEmpty())
+                .collect(Collectors.toList());
+
+        if (origins.size() == 1 && origins.get(0).equals("*")) {
+            // Allow all origins (disable credentials in this mode)
+            config.setAllowedOriginPatterns(List.of("*"));
+            config.setAllowCredentials(true);
+        } else {
+            config.setAllowedOrigins(origins);
+            config.setAllowCredentials(true);
+        }
+
         config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
         config.setAllowedHeaders(List.of("*"));
-        config.setAllowCredentials(true);
+        config.setExposedHeaders(List.of("Authorization"));
         config.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
